<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">媒体秀</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="backspace">退格</string>
    <string name="result">=</string>
    <string name="clear">清除</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="decrease">-</string>
    <string name="multiply">*</string>
    <string name="chu">/</string>
    <string name="dian">.</string>
    <string name="left">屏幕色</string>
    <string name="right">)</string>
    <string name="error">运算不合法！</string>

</resources>
